--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 appnope==0.1.4
 asttokens==2.4.1
 autocorrect==2.6.1
+boto3==1.34.101
+botocore==1.34.101
 comm==0.2.2
 contourpy==1.2.1
 cycler==0.12.1
@@ -11,6 +13,7 @@ fonttools==4.51.0
 ipykernel==6.29.4
 ipython==8.23.0
 jedi==0.19.1
+jmespath==1.0.1
 jupyter_client==8.6.1
 jupyter_core==5.7.2
 kiwisolver==1.4.5
@@ -34,10 +37,13 @@ pyparsing==3.1.2
 python-dateutil==2.9.0.post0
 pytz==2024.1
 pyzmq==26.0.2
+s3transfer==0.10.1
+seaborn==0.13.2
 six==1.16.0
 stack-data==0.6.3
 tornado==6.4
 traitlets==5.14.3
 typing_extensions==4.11.0
 tzdata==2024.1
+urllib3==2.2.1
 wcwidth==0.2.13
